Bug 1700710 - Restrict the cancelTracking code in menuWillOpen to menus opened from the menubar. r=harry

The purpose of this code is to close non-native context menus when clicking the
menubar. However, menuWillOpen is also called when opening a native context menu.
And when opening a context menu on top of a non-native menu (e.g. the Downloads
panel or a bookmarks toolbar folder), this code backfires and closes the panel.
Restricting it to the menubar fixes that scenario.

Differential Revision: https://phabricator.services.mozilla.com/D110305